sdk/python/lib/test/automation/errors/compilation_error/go/main.go
//go:build !all
// +build !all

package main

import (
	"github.com/khulnasoft/khulnasoft/sdk/v3/go/khulnasoft"
)

func main() {
	khulnasoft.Run(func(ctx *khulnasoft.Context) error {
		will not compile
		return nil
	})
}
